短期改进（redis缓存，milvus向量数据库，动态切块）