@@ -6,10 +6,14 @@ import com.volcengine.ark.runtime.model.multimodalembeddings.MultimodalEmbedding
 import com.volcengine.ark.runtime.service.ArkService;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Value;
+import org.springframework.data.redis.core.RedisTemplate;
 import org.springframework.stereotype.Service;
 
+import java.security.MessageDigest;
+import java.security.NoSuchAlgorithmException;
 import java.util.ArrayList;
 import java.util.List;
+import java.util.concurrent.TimeUnit;
 
 /**
  * 嵌入向量服务
@@ -21,15 +25,35 @@ public class EmbeddingService {
     @Autowired
     private ArkService arkService;  // 火山引擎 Ark 服务
 
+    @Autowired(required = false)
+    private RedisTemplate<String, Object> redisTemplate;  // Redis 模板（可选）
+
     @Value("${volcengine.embedding.model}")
     private String model;  // 嵌入模型 ID
 
+    @Value("${embedding.cache.enabled:true}")
+    private boolean cacheEnabled;  // 是否启用缓存
+
+    @Value("${embedding.cache.ttl:86400}")
+    private long cacheTtl;  // 缓存过期时间（秒），默认 24 小时
+
     /**
- * 生成单个文本的嵌入向量
+ * 生成单个文本的嵌入向量（带缓存）
  * @param text 输入文本
  * @return 嵌入向量（Float 列表）
  */
     public List<Float> generateEmbedding(String text) {
+        // 尝试从缓存获取
+        if (cacheEnabled && redisTemplate != null) {
+            String cacheKey = generateCacheKey(text);
+            List<Float> cachedEmbedding = (List<Float>) redisTemplate.opsForValue().get(cacheKey);
+            
+            if (cachedEmbedding != null) {
+                System.out.println("从缓存获取嵌入向量，文本长度: " + text.length());
+                return cachedEmbedding;
+            }
+        }
+        
         System.out.println("开始生成嵌入，模型: " + model);
         System.out.println("输入文本长度: " + text.length());
         
@@ -52,6 +76,24 @@ public class EmbeddingService {
         System.out.println("API 返回结果: " + result);
         
         // 根据火山引擎 SDK 的实际 API 结构提取嵌入向量
+        List<Float> embedding = extractEmbedding(result);
+        
+        // 将结果存入缓存
+        if (cacheEnabled && redisTemplate != null && embedding != null) {
+            String cacheKey = generateCacheKey(text);
+            redisTemplate.opsForValue().set(cacheKey, embedding, cacheTtl, TimeUnit.SECONDS);
+            System.out.println("嵌入向量已缓存，TTL: " + cacheTtl + " 秒");
+        }
+        
+        return embedding;
+    }
+    
+    /**
+ * 从 API 结果中提取嵌入向量
+ * @param result API 返回结果
+ * @return 嵌入向量
+ */
+    private List<Float> extractEmbedding(MultimodalEmbeddingResult result) {
         if (result != null) {
             System.out.println("结果不为 null，尝试提取嵌入向量...");
             try {
@@ -75,7 +117,7 @@ public class EmbeddingService {
                     System.out.println("Data 是 List，大小: " + dataList.size());
                     
                     if (!dataList.isEmpty()) {
-                        Object firstItem = dataList.getFirst();
+                        Object firstItem = dataList.get(0);
                         System.out.println("第一个元素类型: " + firstItem.getClass().getName());
                         
                         if (firstItem instanceof com.volcengine.ark.runtime.model.multimodalembeddings.MultimodalEmbedding) {
@@ -101,6 +143,32 @@ public class EmbeddingService {
         }
         
         throw new RuntimeException("Failed to generate embedding - 请查看控制台日志了解详细错误信息");
+    }
+    
+    /**
+ * 生成缓存键（基于文本内容的 MD5 哈希）
+ * @param text 输入文本
+ * @return 缓存键
+ */
+    private String generateCacheKey(String text) {
+        try {
+            MessageDigest md = MessageDigest.getInstance("MD5");
+            byte[] hash = md.digest((model + ":" + text).getBytes());
+            StringBuilder hexString = new StringBuilder();
+            
+            for (byte b : hash) {
+                String hex = Integer.toHexString(0xff & b);
+                if (hex.length() == 1) {
+                    hexString.append('0');
+                }
+                hexString.append(hex);
+            }
+            
+            return "embedding:" + hexString.toString();
+        } catch (NoSuchAlgorithmException e) {
+            // 如果 MD5 不可用，使用简单的哈希
+            return "embedding:" + (model + ":" + text).hashCode();
+        }
     }
 
     /**
